--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/styles/index.css" />
-  <script src="https://kit.fontawesome.com/dd68711fa6.js" crossorigin="anonymous"></script>
+  <!-- <script src="https://kit.fontawesome.com/dd68711fa6.js" crossorigin="anonymous"></script> -->
   <title>
     Scissors | Optimize Your Online Experience with Our Advanced URL
     Shortening Solution
@@ -16,7 +16,7 @@
   <div class="container">
     <nav>
       <div class="logo">
-        <img src="./assets/icons/logo-blue.svg" alt="scissor logo" />
+        <img src="./assets/icon/logo-blue.svg" alt="scissor logo" />
       </div>
       <ul class="nav-list">
         <li class="nav-item">
@@ -48,7 +48,7 @@
           Optimize Your Online Experience with Our Advanced
           <span> URL Shortening </span>
           Solution
-          <img src="./assets/icons/blue-stroke.svg" class="blue-stroke" alt="" />
+          <img src="./assets/icon/blue-stroke.svg" class="blue-stroke" alt="" />
         </h1>
         <p class="subtitle">
           Personalize your shortened URLs to align with your brand identity.
@@ -65,9 +65,9 @@
             style="color: var(--primary-300); font-family: 'Gilroy-Bold' !important;">Learn more</a>
         </div>
       </div>
-      <img src="./assets/icons//box.png" alt="" />
+      <img src="./assets/icon//box.png" alt="" />
     </section>
-    <img src="./assets/icons/oval.svg" alt="" class="oval" />
+    <img src="./assets/icon/oval.svg" alt="" class="oval" />
     <section class="hero-2">
       <div class="possibilities">
         <h2>
@@ -106,7 +106,7 @@
         </section>
         <section class="reasons">
           <div class="reason">
-            <img src="./assets/icons/link.svg" alt="" />
+            <img src="./assets/icon/link.svg" alt="" />
             <h2>URL Shortening</h2>
             <p>
               Scissor allows you to shorten URLs of your business, events.
@@ -114,7 +114,7 @@
             </p>
           </div>
           <div class="reason">
-            <img src="./assets//icons/edit.svg" alt="" />
+            <img src="./assets//icon/edit.svg" alt="" />
             <h2>Custom URLs</h2>
             <p>
               With Scissor, you can create custom URLs, with the length you
@@ -122,7 +122,7 @@
             </p>
           </div>
           <div class="reason">
-            <img src="./assets/icons/grid.svg" alt="" />
+            <img src="./assets/icon/grid.svg" alt="" />
             <h2>QR Codes</h2>
             <p>
               Generate QR codes to your business, events. Bring your audience
@@ -130,7 +130,7 @@
             </p>
           </div>
           <div class="reason">
-            <img src="./assets/icons/activity.svg" alt="" />
+            <img src="./assets/icon/activity.svg" alt="" />
             <h2>Data Analytics</h2>
             <p>
               Receive data on the usage of either your shortened URL, custom
@@ -144,7 +144,7 @@
     <section class="hero perfect">
       <header>
         <h2 class="title">
-          <img src="./assets/icons/stroke.svg" alt="" />
+          <img src="./assets/icon/stroke.svg" alt="" />
           <p>A <span>price perfect</span> for your needs.</p>
         </h2>
         <p class="subtitle">
@@ -162,23 +162,23 @@
             </div>
             <ul class="plan-items">
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>Unlimited URL Shortening</span>
               </li>
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>Basic Link Analysis</span>
               </li>
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>Customizable Short Links</span>
               </li>
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>Standard Support</span>
               </li>
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>Ad-supported</span>
               </li>
             </ul>
@@ -193,23 +193,23 @@
             </div>
             <ul class="plan-items">
               <li>
-                <img src="./assets/icons/check-white.svg" alt="" />
+                <img src="./assets/icon/check-white.svg" alt="" />
                 <span>Enhanced Link Analytics</span>
               </li>
               <li>
-                <img src="./assets/icons/check-white.svg" alt="" />
+                <img src="./assets/icon/check-white.svg" alt="" />
                 <span>Custom Branded Domains</span>
               </li>
               <li>
-                <img src="./assets/icons/check-white.svg" alt="" />
+                <img src="./assets/icon/check-white.svg" alt="" />
                 <span>Advanced Link Customization</span>
               </li>
               <li>
-                <img src="./assets/icons/check-white.svg" alt="" />
+                <img src="./assets/icon/check-white.svg" alt="" />
                 <span>Priority Support</span>
               </li>
               <li>
-                <img src="./assets/icons/check-white.svg" alt="" />
+                <img src="./assets/icon/check-white.svg" alt="" />
                 <span>Ad-free Experience</span>
               </li>
             </ul>
@@ -225,23 +225,23 @@
             </div>
             <ul class="plan-items">
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>Team Collaboration</span>
               </li>
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>User Roles and Permissions</span>
               </li>
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>Enhanced Security</span>
               </li>
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>API Access</span>
               </li>
               <li>
-                <img src="./assets/icons/check.svg" alt="" />
+                <img src="./assets/icon/check.svg" alt="" />
                 <span>Dedicated Account Manager</span>
               </li>
             </ul>
@@ -269,7 +269,7 @@
         </div>
         <button class="btn-primary" style="width: 100%; gap: 0.65rem; max-width: 100%">
           <span>Trim URL</span>
-          <img src="./assets/icons/wand.svg" alt="" />
+          <img src="./assets/icon/wand.svg" alt="" />
         </button>
         <p class="form-note">
           By clicking TrimURL, I agree to the
@@ -282,7 +282,7 @@
     <section class="faq-container">
       <section class="faq">
         <header>
-          <img src="./assets/icons/stroke.svg" alt="" />
+          <img src="./assets/icon/stroke.svg" alt="" />
           <h2>FAQs</h2>
         </header>
         <div class="accordion">
@@ -291,7 +291,10 @@
               <span class="accordion-title">
                 How does URL shortening work?
               </span>
-              <i class="fa-solid fa-plus icon" style="color: #141414"></i>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" style="width: 1.5rem;height: 1.5rem;color: #141414;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
             </button>
             <div class="accordion-content">
               <p>
@@ -308,7 +311,10 @@
                 Is it necessary to create an account to use the URL shortening
                 service?
               </span>
-              <i class="fa-solid fa-plus icon" style="color: #141414"></i>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" style="width: 1.5rem;height: 1.5rem;color: #141414;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
             </button>
             <div class="accordion-content">
               <p>
@@ -322,8 +328,10 @@
               <span class="accordion-title">
                 Are the shortened links permanent? Will they expire?
               </span>
-              <!-- <span class="icon" aria-hidden="true"></span> -->
-              <i class="fa-solid fa-plus icon" style="color: #141414"></i>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" style="width: 1.5rem;height: 1.5rem;color: #141414;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
             </button>
             <div class="accordion-content">
               <p>
@@ -337,7 +345,10 @@
               <span class="accordion-title">
                 Are there any limitations on the number of URLs I can shorten?
               </span>
-              <i class="fa-solid fa-plus icon" style="color: #141414"></i>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" style="width: 1.5rem;height: 1.5rem;color: #141414;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
             </button>
             <div class="accordion-content">
               <p>
@@ -352,7 +363,10 @@
                 Can I customize the shortened URLs to reflect my brand or
                 content?
               </span>
-              <i class="fa-solid fa-plus icon" style="color: #141414"></i>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" style="width: 1.5rem;height: 1.5rem;color: #141414;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
             </button>
             <div class="accordion-content">
               <p>
@@ -366,7 +380,10 @@
               <span class="accordion-title">
                 Can I track the performance of my shortened URLs?
               </span>
-              <i class="fa-solid fa-plus icon" style="color: #141414"></i>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" style="width: 1.5rem;height: 1.5rem;color: #141414;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
             </button>
             <div class="accordion-content">
               <p>
@@ -381,7 +398,10 @@
                 How secure is the URL shortening service? Are the shortened
                 links protected against spam or malicious activity?
               </span>
-              <i class="fa-solid fa-plus icon" style="color: #141414"></i>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" style="width: 1.5rem;height: 1.5rem;color: #141414;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
             </button>
             <div class="accordion-content">
               <p>
@@ -395,7 +415,10 @@
               <span class="accordion-title">
                 What is a QR code and what can it do?
               </span>
-              <i class="fa-solid fa-plus icon" style="color: #141414"></i>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" style="width: 1.5rem;height: 1.5rem;color: #141414;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
             </button>
             <div class="accordion-content">
               <p>
@@ -410,7 +433,10 @@
                 Is there an API available for integrating the URL shortening
                 service into my own applications or websites?
               </span>
-              <i class="fa-solid fa-plus icon" style="color: #141414"></i>
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                stroke="currentColor" style="width: 1.5rem;height: 1.5rem;color: #141414;">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
             </button>
             <div class="accordion-content">
               <p>
@@ -430,20 +456,20 @@
       <div class="container">
         <section class="logo-socials">
           <div>
-            <img src="./assets/icons/logo-black.svg" alt="logo" />
+            <img src="./assets/icon/logo-black.svg" alt="logo" />
           </div>
           <div class="socials">
             <a href="/">
-              <img src="/assets/icons/twitter.svg" alt="twitter" />
+              <img src="/assets/icon/twitter.svg" alt="twitter" />
             </a>
             <a href="/">
-              <img src="/assets/icons/instagram.svg" alt="instagram" />
+              <img src="/assets/icon/instagram.svg" alt="instagram" />
             </a>
             <a href="/">
-              <img src="/assets/icons/linkedin.svg" alt="linkedin" />
+              <img src="/assets/icon/linkedin.svg" alt="linkedin" />
             </a>
             <a href="/">
-              <img src="/assets/icons/facebook.svg" alt="facebook" />
+              <img src="/assets/icon/facebook.svg" alt="facebook" />
             </a>
           </div>
         </section>
